# sizebounded

./: CMakeLists.txt  README.md  sizebounded.hpp  sizebounded.ipp  test.cpp
